@@ -1,5 +1,9 @@
 LIST OF CHANGES
 
+ - npg_tracking::illumina::runfolder is simplified at a cost of loosing
+   ability to pass to the constructor an arbitrary path
+ - npg_tracking::illumina::run::short_info role - added database
+   look-up aided ability to deal with arbitrary run folder names
  - to account for ephemeral staging areas on OpenStack, extend staging
    directory path match expression in Apache httpd config file
  - use bash shell when executing system calls from Perl
